nx-libs (2:3.5.0.14-0) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * New upstream release of nxagent (3.5.0-9).
  * Adapt patch series (all hunks succeeded automatically).
  * Drop patch: 120_nxagent_libcairo-null-source-drawables.full.patch, the issue
    has been fixed by NoMachine (TR05J02703).

  [ Mihai Moldovan ]
  * Add patch: 052_nxcomp_macos10-nxauth-location.full+lite.patch, change
    nxauth search location on Mac OS X to $NX_SYSTEM/nxauth to facilitate
    application bundle building.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 11 May 2012 23:57:18 +0200

nx-libs (2:3.5.0.13-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Let nxagent Debian package depend on xfonts-base.

  [ Jim Burnes ]
  * Add patch: 120_nxagent_libcairo-null-source-drawables.full.patch, solves
    crashes of GTK applications based on libcairo 1.12.1+.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 11 May 2012 23:51:35 +0200

nx-libs (2:3.5.0.12-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Update patch: 001_add-main-makefile.full+lite.patch, adapt patch from
    packaging. Test for Makefiles in subfolders before calling them.
    Fixes build failure during ,,make distclean'' calls.
  * Provide temporary workaround for installation on Debian 64bit with
    multiarch support (via libnx-x11.postinst and .prerm).
  * Re-introduce proper Xinerama support on non-multiarch systems.

  [ Mihai Moldovan ]
  * Add patch: 051_nxcomp_macos105-fdisset.full+lite.patch, work around
    issue in Mac OS X 10.5 SDK. Pass address of fd_set structs on the stack
    to the FD_ISSET macro/function, instead of the struct itself.
  * Update patch: 005_nxcomp_gcc43.full+lite.patch, fix faulty path to
    nxcomp/Split.cpp.

  [ Oleksandr Shneyder ]
  * Add patch: 203_nxagent_disable-rootless-exit.full.patch, add command line
    argument "-norootlessexit". Usually, nxagent exits after 30 seconds if
    running in rootless mode and no X-Clients are present. Starting nxagent