@@ -34,7 +34,6 @@
 106_nxagent_utf8-copy-clipboard.full.patch
 107_nxagent_clipboard-compound-text+small-bed-sheets.full.patch
 108_nxagent_wine-close-delay.full.patch
-109_nxagent_locale-utf8-compound-text.full.patch
 110_nxagent_createpixmap-bounds-check.full.patch
 200_nxagent_check-binary-x2go-flavour.full.patch
 201_nxagent_set-x2go-icon-if-x2goagent-flavour.full.patch
